--- a/src/emulator/CMakeLists.txt
+++ b/src/emulator/CMakeLists.txt
@@ -23,28 +23,6 @@ if(${CMAKE_SYSTEM_NAME} MATCHES "Linux")
 	set(LINUX TRUE)
 endif()
 
-macro(configure_boost)
-	message("configuring boost")
-
-	set(Boost_USE_STATIC_LIBS ON)
-	set(Boost_USE_MULTITHREADED ON)
-	set(BOOST_COMPONENTS filesystem program_options system)
-
-	find_package(Boost COMPONENTS ${BOOST_COMPONENTS} REQUIRED)
-
-	include_directories(${Boost_INCLUDE_DIRS})
-
-	if(Boost_FOUND)
-		message("Using Boost_VERSION: ${Boost_VERSION}")
-		message("Using Boost_INCLUDE_DIRS: ${Boost_INCLUDE_DIRS}")
-		message("Using Boost_LIBRARY_DIRS: ${Boost_LIBRARY_DIRS}")
-	else()
-		message("Boost library is not found")
-	endif()
-endmacro(configure_boost)
-
-configure_boost()
-
 if (USE_GDBSTUB)
 	add_definitions(-DUSE_GDBSTUB)
 endif()
@@ -90,7 +68,7 @@ sfo.cpp
 sfo.h
 )
 
-target_link_libraries(emulator PRIVATE ${Boost_LIBRARIES} cpu dialog elfio gdbstub glbinding-aux glutil gui host shader imgui modules nids util vita-toolchain yaml-cpp)
+target_link_libraries(emulator PRIVATE cpu dialog elfio gdbstub glbinding-aux glutil gui host shader imgui modules nids util vita-toolchain yaml-cpp)
 if(LINUX)
 	target_link_libraries(emulator PRIVATE stdc++fs)
 endif()
