--- a/src/emulator/host/CMakeLists.txt
+++ b/src/emulator/host/CMakeLists.txt
@@ -17,4 +17,4 @@ configure_file(src/version.cpp.in version.cpp)
 
 target_include_directories(host PUBLIC include)
 target_link_libraries(host PUBLIC audio cpu ctrl gxm io kernel mem net nids np renderer rtc util gui gdbstub)
-target_link_libraries(host PRIVATE ${Boost_LIBRARIES} glutil microprofile sdl2)
+target_link_libraries(host PRIVATE glutil microprofile sdl2)
